Fix freecivx-server to run on Java 17 - replace getLast() with get(size-1)
Co-authored-by: andreasrosdal <41650711+andreasrosdal@users.noreply.github.com>